# OCRApp

./: README.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
ocr_project/: pyproject.toml
ocr_project/ocr_project/backend/: server.js
ocr_project/ocr_project/backend/py/: main.py  model.py  ocr_model.h5
ocr_project/ocr_project/frontend/: index.html
ocr_project/ocr_project/frontend/css/: style.css
ocr_project/ocr_project/frontend/js/: script.js
ocr_project/tests/: test_ocr_project.py
