[tool.poetry]
name = "ocr_project"
version = "0.1.0"
description = ""
authors = ["gustavo.pertuzat <gustavo.pertuzat@hes-so.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
matplotlib = "^3.4.2"
numpy = "1.19.3"
keras = "^2.4.3"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
